fexatheme.theme.css

--- a/fexatheme.theme.css
+++ b/fexatheme.theme.css
@@ -3,13 +3,9 @@
  * @author Foxygames2012
  * @version 1.0.5
  * @description Por fin un tema de fexa god para discord xd
- * @source https://raw.githubusercontent.com/mwittrien/BetterDiscordAddons/master/Themes/BasicBackground/BasicBackground.theme.css
- * @invite Jx3TjNS
- * @donate https://www.paypal.me/MircoWittrien
- * @patreon https://www.patreon.com/MircoWittrien
- * @website https://github.com/mwittrien/BetterDiscordAddons/tree/master/Themes/BasicBackground
- * @authorId 278543574059057154
- * @BDEditor BasicBackground
+ * @invite https://discord.gg/b4RXbDaevM
+ * @website https://github.com/foxygames2012fexagod/Fexa-Theme
+ * @authorId 775034013454434345
 */
 
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/BasicBackground.css');
